fixed the unscrollable playlist issue

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 			href="https://unpkg.com/purecss@1.0.1/build/base-min.css"
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=7">
+		<link rel="stylesheet" href="css.css?version=10">
 
 		<script src="https://kit.fontawesome.com/72096b0630.js" crossorigin="anonymous"></script>
 
@@ -232,27 +232,95 @@
 			</article>
 		</div>
 
-		<div class="menu menu-playlist shadow-top menu-closed">
-			<ul>
-				<li>
-					<a>Патката бяла</a>
-				</li>
-				<li>
-					<a class="selected">Баба меца си изгуби кеца</a>
-				</li>
-				<li>
-					<a>Кондю яде спанак</a>
-				</li>
-				<li>
-					<a>Don't leave me, Kage, you played the best shit you've ever fucking played</a>
-				</li>
-				<li>
-					<a>Има марулка, има трушийка и ще пийнем ракийка</a>
-				</li>
-				<li>
-					<a>Да изорем дружно нивите, момчета!</a>
-				</li>
-			</ul>
+		<div class="menu-playlist-wrapper shadow-top menu-closed">
+			<div class="menu menu-playlist">
+				<ul>
+					<li>
+						<a>
+							<span class="playlist-title">Патката бяла</span>
+							<span class="playlist-time">10:23</span>
+						</a>
+					</li>
+					<li>
+						<a class="selected">
+							<span class="playlist-title">Баба меца си изгуби кеца</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">Кондю яде спанак</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">Don't leave me, Kage, you played the best shit you've ever fucking played</span>
+							<span class="playlist-time">10:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">Има марулка, има трушийка и ще пийнем ракийка</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">Да изорем дружно нивите, момчета!</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">Ох вел</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">Коньовишки жентълмен</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">жунгла е тука</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">дай му жега с паста за зъби корега</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">аре ве, докога ще пиша, не стана ли достатъчно високо това?</span>
+							<span class="playlist-time">10:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">Небостъргач ли строим тука?</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">и осван това ми писна от тая песен, дето я слушам</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<span class="playlist-title">Фред Герлах си пускам - Банат</span>
+							<span class="playlist-time">1:23</span>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 
 		<!-- Whitespace ruins alignment, so <a> tags had to be compressed -->
