--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="shortcut icon" href="img/favicon.ico" />
+		<link rel="shortcut icon" href="img/favicon.ico">
 
 		<link
 			rel="stylesheet"
@@ -19,9 +19,13 @@
 			href="https://unpkg.com/purecss@1.0.1/build/base-min.css"
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=12">
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
+			crossorigin="anonymous">
 
-		<script src="https://kit.fontawesome.com/72096b0630.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="css.css?version=12">
 
 		<script src="js.js?version=3"></script>
 	</head>
