--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=14">
+		<link rel="stylesheet" href="css.css?version=16">
 
 		<script src="js.js?version=3"></script>
 	</head>
@@ -209,10 +209,10 @@
 
 
 			<div class="content content-404">
-				<article>
-					<h1>404</h1>
-					<p>"http://ivan-vazov.com/" not found.</p>
-				</article>
+				<h1><i class="fas fa-trash-alt"></i> 404</h1>
+				<p>
+					There is nothing to see here. Please continue browsing or go to <a href="/">Home page</a>.
+				</p>
 			</div>
 
 
