lyrics page layout

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=16">
+		<link rel="stylesheet" href="css.css?version=17">
 
 		<script src="js.js?version=3"></script>
 	</head>
@@ -232,9 +232,18 @@
 			</div>
 
 			<div class="content content-lyrics">
-				<article class="lyrics">
-					<div class="stihove"><h3>Спонтанно механично разпръскване на аромати у дома</h3><div class="tekst_prevod">[<a href="/музика/текстове/10-С.М.Р.А.Д#english_lyrics">English Translation</a>]</div>Во стаичката пръска аромат,<br>тайно шмугнал се през джама.<br>Лъхна мене тази смрад,<br>с портрета гледаме се двама.<br><br>Снощи воден от любов гореща,<br>зная - идва ти у нас,<br>лице в лице с мастията зловеща<br>обърна го на бяг завчас<br><br>После с резко джекичановско движение,<br>от двойно салто в троен аксел,<br>со безмерно ускорение,<br>влетя; за мен лиги си наточил.<br><br>Во перваза тихичко се джасна,<br>малко поизкърти дограмата,<br>но да видиш изгората прекрасна,<br>баш туй ти маеше душата.<br><br>Стъпка подир стъпка<br>коридорът се скъсява<br>и нараства твойта тръпка,<br>и перманентно усмърдяваш.<br><br>Во точка произволна,<br>но пък доста акуратно,<br>с физиономия доволна,<br>вратата бутна деликатно.<br><br>Но мойта липса бе за тебе видна,<br>"Само да та гепна" -<br>от плюнки дъжд изригна -<br>"тебе дънкити шти цепна!"<br><br>И навъсен бързо се завърна<br>Като мълния през джама мина<br>Назад се вече не обърна<br>Под светлината лунна си замина<br><br>Во стаичката пръска аромат,<br>сладък като бриз крайречен,<br>незаличим от никой препарат,<br>остана споменът за тебе вечен. <h3 id="english_lyrics">Spontaneous mechanic dipersion of fragrances at home</h3>There is a smell in the room,<br>You secretly snuck in through the window.<br>Now I can feel it<br>And I look at your portrait.<br><br>Last night your hot love<br>has led you to my home, I know.<br>But when you faced the evil cur,<br>you ran around in haste.<br><br>After that, as fast as Jackie Chan<br>You did a double somersault then a tripple axel jump,<br>And with infinite acceleration<br>You flew in, flaming with desire.<br><br>You bumped quietly into the sill<br>And destroyed the woodwork a little,<br>But to see your beautiful love<br>Was the only thing on your mind.<br><br>Step by step<br>The corridor becomes shorter<br>And your passion increases,<br>And your smell would stay permanently.<br><br>In a random spot,<br>However, very accurately,<br>With your face showing satisfaction,<br>you pushed the door softly.<br><br>But my absence came to your knowledge,<br>"Just let me get to you", <br>A shower of saliva bursted,<br>"I'll rip your blue jeans".<br><br>With a frowny face you came back<br>Through the window like a lightning<br>You never turned back anymore<br>You walked away under the moonlight<br><br>There is a smell in the room,<br>So sweet, like the breeze on a river bank.<br>Resistant to any cleaning solution,<br>Has remained the memory of you. </div>
-				</article>
+				<h1>Song lyrics</h1>
+				<div class="lyrics-super-wrapper">
+					<div class="lyrics-wrapper">
+						<h3>Спонтанно механично разпръскване на аромати у дома</h3>
+						<a class="english-translation-link" href="#english_lyrics">English translation below</a>
+						<div class="lyrics">По зашумена пътека край езерния бряг,<br>там, където гръм ударил стар изсъхнал бряст,<br>по залез яздел пътник и търсел си подслон,<br>и стигнал той със коня до чуден дървен дом.<br><br>А там живеел отдавна шаман могъщ и стар,<br>наметнат с вълчи кожи и с очи от жълта жар.<br>Хиляда племена го почитали за жрец.<br>Махнел ли с ръка веднъж викал от смъртта мъртвец.<br><br>Конникът поспрял се до голямото дърво<br>и светнало се мигом, и попаднал в друг живот:<br>жрецът още млад и със скръстени ръце<br>мълчешком враг срещал - полужив, полумъртвец.<br><br>Той идел от друг свят, бил също тъй могъщ.<br>Езерото закипяло, плиснал черен дъжд.<br>Изчезнала магията с гръм, а точно там<br>да помни битката останал бряст самичък-сам.<br><br>... и той останал там.<br>... и той останал сам. (2)</div>
+					</div>
+
+					<div class="lyrics-wrapper">
+						<h3 id="english_lyrics">Spontaneous mechanic dipersion of fragrances at home</h3><div class="lyrics">On a trail between the bushes by the lake shore,<br>where lightning stroke an old dried elm tree,<br>at sunset a horseman was riding, seeking for a shelter,<br>and he found a peculiar wooden dwelling.<br><br>There lived an old and mighty shaman.<br>He was wearing wolf skins, and he had eyes of yellow embers.<br>He was a priest of a thousand tribes.<br>He could bring a man back from the dead in a wave of his hand.<br><br>The horseman stopped by the large tree.<br>Suddenly, there was a lightning, then he fell into another life.<br>The young priest was standing with folded hands,<br>in silence he was meeting a foe - neither dead, nor alive.<br><br>It was comming from another world, it was as powerful as him.<br>The lake started boiling, black rain started falling.<br>The magic disappeared with a thunder, and right there<br>a lonesome elm tree still remembers the battle.<br><br>... still he is there.<br>... still he is alone. (2)</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
