home page layout

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=17">
+		<link rel="stylesheet" href="css.css?version=21">
 
 		<script src="js.js?version=3"></script>
 	</head>
@@ -155,12 +155,15 @@
 			<div class="content content-home">
 				<article>
 					<h1>Home Page</h1>
-					<p>This is the den of the blues dimosaur (Latin: Dimmu Saurus).</p>
-					<p>
-						Това е гаражен проект за блус, рок и метъл без ограничения и без правила – каквато трябва да бъде истинската музика.
+					<p>Добре дошли в бърлогата на Черния Димозавър (латински: <i>Dimmu Saurus</i>). Това е гаражен проект за блус, рок и метъл без ограничения и без правила – каквато трябва да бъде истинската музика.
 					</p>
-					<p>Ако харесвате такава музика, продължете към <a href="/музика">дискографията</a>, за да чуете някоя песен. А ако сте любопитни да разберете нещо повече за проекта, прочетете <a href="/биография">историята на „Димозавъръ“.</a>
+					<p>Ако харесвате такава музика, продължете към <a href="/музика">дискографията</a>, за да чуете някоя песен. А ако сте любопитни да разберете нещо повече за проекта, прочетете <a href="/биография">историята на Димозавъръ</a>.
 					</p>
+<!-- 					<p>Welcome the Black Blues Dimosaur's den (latin: <i>Dimmu Saurus</i>). It is a garage project for blues, rock and metal music, without any rules or limitations. The way real music should be.
+					</p> -->
+
+<!-- 					<p>Bienvenus à l'antre de Blues Dinosaure Noir (en latin: <i>Dimmu Saurus</i>). Dimmu Saurus est un projet de musique garage, dédié à la création de blues, metal et rock, sans règles ou restrictions.
+					</p> -->
 				</article>
 
 				<h1>Последни новини</h1>
@@ -172,9 +175,13 @@
 						Ново кънтри-блус парче, с което се връщаме назад към древните времена, когато магията е била жива.
 					</p>
 
-					<a href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Самотният старец край езерния бряг</a>
+					<p>
+						<a class="tune-link" href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Самотният старец край
+						езерния бряг</a>
+					</p>
 				</article>
 
+				<hr>
 
 				<article>
 					<h3>Lorem Ipsum</h3>
@@ -183,6 +190,25 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis. Ut feugiat, lectus non convallis ultrices, arcu lectus posuere ligula, eget ultrices ipsum ex ac dui. Integer vitae consectetur lorem. Mauris vitae sem a sem bibendum ullamcorper quis eget leo.</p>
 
 					<p>Donec semper libero sit amet auctor hendrerit. Mauris et tincidunt est. Aliquam egestas velit ipsum, ornare luctus nibh commodo laoreet. Fusce.</p>
+
+					<p>
+						<a class="tune-link" href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Mauris et tincidunt est</a>
+					</p>
+				</article>
+
+				<hr>
+
+				<article>
+					<h3>Lorem Ipsum</h3>
+					<h4>23.04.1521</h4>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis. Ut feugiat, lectus non convallis ultrices, arcu lectus posuere ligula, eget ultrices ipsum ex ac dui. Integer vitae consectetur lorem. Mauris vitae sem a sem bibendum ullamcorper quis eget leo.</p>
+
+					<p>Donec semper libero sit amet auctor hendrerit. Mauris et tincidunt est. Aliquam egestas velit ipsum, ornare luctus nibh commodo laoreet. Fusce.</p>
+
+					<p>
+						<a class="tune-link" href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Mauris et tincidunt est</a>
+					</p>
 				</article>
 			</div>
 
