tune page layout; temporarily switched to local reset.css

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,16 @@
 
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Griffy|Noto+Sans:400,400i,700,700i&amp;display=swap&amp;subset=cyrillic">
+			href="reset.css">
+
+<!-- 		<link
+			rel="stylesheet"
+			href="https://unpkg.com/purecss@1.0.1/build/base-min.css"
+			crossorigin="anonymous"> -->
 
 		<link
 			rel="stylesheet"
-			href="https://unpkg.com/purecss@1.0.1/build/base-min.css"
-			crossorigin="anonymous">
+			href="https://fonts.googleapis.com/css?family=Griffy|Noto+Sans:400,400i,700,700i&amp;display=swap&amp;subset=cyrillic">
 
 		<link
 			rel="stylesheet"
@@ -25,7 +29,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=21">
+		<link rel="stylesheet" href="css.css?version=22">
 
 		<script src="js.js?version=3"></script>
 	</head>
@@ -159,14 +163,14 @@
 					</p>
 					<p>Ако харесвате такава музика, продължете към <a href="/музика">дискографията</a>, за да чуете някоя песен. А ако сте любопитни да разберете нещо повече за проекта, прочетете <a href="/биография">историята на Димозавъръ</a>.
 					</p>
-<!-- 					<p>Welcome the Black Blues Dimosaur's den (latin: <i>Dimmu Saurus</i>). It is a garage project for blues, rock and metal music, without any rules or limitations. The way real music should be.
-					</p> -->
+ 					<p>Welcome the Black Blues Dimosaur's den (latin: <i>Dimmu Saurus</i>). It is a garage project for blues, rock and metal music, without any rules or limitations. The way real music should be.
+					</p>
 
-<!-- 					<p>Bienvenus à l'antre de Blues Dinosaure Noir (en latin: <i>Dimmu Saurus</i>). Dimmu Saurus est un projet de musique garage, dédié à la création de blues, metal et rock, sans règles ou restrictions.
-					</p> -->
+ 					<p>Bienvenus à l'antre de Blues Dinosaure Noir (en latin: <i>Dimmu Saurus</i>). Dimmu Saurus est un projet de musique garage, dédié à la création de blues, metal et rock, sans règles ou restrictions.
+					</p>
 				</article>
 
-				<h1>Последни новини</h1>
+				<h1>Новини</h1>
 
 				<article>
 					<h3>Нова песен - "Самотният старец край езерния бряг"</h3>
@@ -252,8 +256,38 @@
 			</div>
 
 			<div class="content content-tune">
-				<article class="pesen">
-					<h3><a href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%B8%D0%B7%D1%82%D0%B5%D0%B3%D0%BB%D0%B8/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"> Жълтият блус </a> - 3:25	</h3><h5> 19 октомври 2014	</h5><ul class="vrzki-ikoni"><li></li><li><a href="javascript:;" onclick="Upravlenie.Playlist.play(27)"><span class="ikona play"></span><span class="tekst lowercase"> Пусни </span></a></li><li><a class="ajaxLink" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D1%82%D0%B5%D0%BA%D1%81%D1%82%D0%BE%D0%B2%D0%B5/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"><span class="ikona lyrics"></span><span class="tekst"> текст </span></a></li><li><a href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%B8%D0%B7%D1%82%D0%B5%D0%B3%D0%BB%D0%B8/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"><span class="ikona download"></span><span class="tekst"> изтеглѝ </span></a></li></ul><hr class="bled-1px"><div><div class="m10"><p>Парчето е създадено за дванайсет дни между 22 февруари и 18 октомври 2014 година.</p><p>Написах това парче, след като през декември 2013, бях болен от грип почти цял месец. При записите, целта ми беше да постигна първичния и минималистичен звук на ранния рок, като в първите албуми на Rolling Stones и Dr. Feelgood и AC/DC.</p><p> Първоначално имах намерение да завърша парчето набързо, но поради временната липса на помещение за записи и тонколони, се наложи това да се случи чак през есента на 2014.</p></div></div>
+				<h1>Подробности за песен</h1>
+				<div>
+					<h2><a href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%B8%D0%B7%D1%82%D0%B5%D0%B3%D0%BB%D0%B8/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81">Жълтият блус</a> - 3:25	</h2>
+
+					<h5>19 октомври 2014</h5>
+
+					<ul class="tune-links">
+						<li class="tune-play">
+							<a href="javascript:;">
+								<i class="fas fa-headphones"></i><span>слушай</span>
+							</a>
+						</li>
+
+						<li class="tune-lyrics">
+							<a href="/lyrics">
+								<i class="fas fa-file-alt"></i><span>текст</span>
+							</a>
+						</li>
+
+						<li class="tune-download">
+							<a href="/download">
+								<i class="fas fa-file-download"></i><span>изтеглѝ</span>
+							</a>
+						</li>
+					</ul>
+
+				</div>
+
+				<hr>
+
+				<article>
+						<p>Парчето е създадено за дванайсет дни между 22 февруари и 18 октомври 2014 година.</p><p>Написах това парче, след като през декември 2013, бях болен от грип почти цял месец. При записите, целта ми беше да постигна първичния и минималистичен звук на ранния рок, като в първите албуми на Rolling Stones и Dr. Feelgood и AC/DC.</p><p> Първоначално имах намерение да завърша парчето набързо, но поради временната липса на помещение за записи и тонколони, се наложи това да се случи чак през есента на 2014.</p>
 				</article>
 			</div>
 
