slight enhancements for album page

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=22">
+		<link rel="stylesheet" href="css.css?version=23">
 
 		<script src="js.js?version=3"></script>
 	</head>
@@ -247,10 +247,17 @@
 
 
 			<div class="content content-discography">
+
+				<h1>Дискография</h1>
 				<article>
-					<h1>Discography</h1>
 					<p>Donec in ullamcorper nisl. Quisque fermentum enim sit amet dui tristique, ut posuere enim dictum. Fusce scelerisque arcu risus, non porta dui lobortis ut. Integer mi nibh, imperdiet in turpis at, dignissim consequat nisi. Nunc arcu ipsum, blandit et velit vitae, feugiat blandit tortor. Integer imperdiet tincidunt nunc, nec convallis augue viverra eget.</p>
 				</article>
+
+
+<!-- 				<h1>(2010) Яхния от мисли</h1>
+				<article>
+					<p>"III" все още не е истински албум, а съдържа най-новите и най-яките песни на Димозавъръ, записани след 2014 година.</p>
+				</article> -->
 
 				<hr>
 
@@ -325,11 +332,6 @@
 						</ol>
 					</div>
 
-					<hr>
-
-					<article>
-						<p>"III" все още не е истински албум, а съдържа най-новите и най-яките песни на Димозавъръ, записани след 2014 година.</p>
-					</article>
 				</div>
 			</div>
 
