css cleanup: not using styles for: h1, h2, h3 and h5 tags anymore

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=24">
+		<link rel="stylesheet" href="css.css?version=26">
 
 		<script src="js.js?version=3"></script>
 	</head>
@@ -158,7 +158,7 @@
 		<div class="content-wrapper">
 			<div class="content content-home">
 				<article>
-					<h1>Home Page</h1>
+					<h1 class="content-heading">Home Page</h1>
 					<p>Добре дошли в бърлогата на Черния Димозавър (латински: <i>Dimmu Saurus</i>). Това е гаражен проект за блус, рок и метъл без ограничения и без правила – каквато трябва да бъде истинската музика.
 					</p>
 					<p>Ако харесвате такава музика, продължете към <a href="/музика">дискографията</a>, за да чуете някоя песен. А ако сте любопитни да разберете нещо повече за проекта, прочетете <a href="/биография">историята на Димозавъръ</a>.
@@ -170,10 +170,10 @@
 					</p>
 				</article>
 
-				<h1>Новини</h1>
+				<h1 class="content-heading">Новини</h1>
 
 				<article>
-					<h3>Нова песен - "Самотният старец край езерния бряг"</h3>
+					<h3 class="news-title">Нова песен - "Самотният старец край езерния бряг"</h3>
 					<h4>01.08.2017</h4>
 					<p>
 						Ново кънтри-блус парче, с което се връщаме назад към древните времена, когато магията е била жива.
@@ -188,7 +188,7 @@
 				<hr>
 
 				<article>
-					<h3>Lorem Ipsum</h3>
+					<h3 class="news-title">Lorem Ipsum</h3>
 					<h4>23.04.1521</h4>
 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis. Ut feugiat, lectus non convallis ultrices, arcu lectus posuere ligula, eget ultrices ipsum ex ac dui. Integer vitae consectetur lorem. Mauris vitae sem a sem bibendum ullamcorper quis eget leo.</p>
@@ -203,7 +203,7 @@
 				<hr>
 
 				<article>
-					<h3>Lorem Ipsum</h3>
+					<h3 class="news-title">Lorem Ipsum</h3>
 					<h4>23.04.1521</h4>
 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis. Ut feugiat, lectus non convallis ultrices, arcu lectus posuere ligula, eget ultrices ipsum ex ac dui. Integer vitae consectetur lorem. Mauris vitae sem a sem bibendum ullamcorper quis eget leo.</p>
@@ -218,7 +218,7 @@
 
 
 			<div class="content content-bio">
-				<h1>About Dimmu Saurus</h1>
+				<h1 class="content-heading">About Dimmu Saurus</h1>
 				<article>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis.</p>
 
@@ -239,7 +239,7 @@
 
 
 			<div class="content content-404">
-				<h1><i class="fas fa-trash-alt"></i> 404</h1>
+				<h1 class="content-heading"><i class="fas fa-trash-alt"></i> 404</h1>
 				<p>
 					There is nothing to see here. Please continue browsing or go to <a href="/">Home page</a>.
 				</p>
@@ -248,13 +248,13 @@
 
 			<div class="content content-discography">
 
-				<h1>Дискография</h1>
+				<h1 class="content-heading">Дискография</h1>
 				<article>
 					<p>Donec in ullamcorper nisl. Quisque fermentum enim sit amet dui tristique, ut posuere enim dictum. Fusce scelerisque arcu risus, non porta dui lobortis ut. Integer mi nibh, imperdiet in turpis at, dignissim consequat nisi. Nunc arcu ipsum, blandit et velit vitae, feugiat blandit tortor. Integer imperdiet tincidunt nunc, nec convallis augue viverra eget.</p>
 				</article>
 
 
-<!-- 				<h1>(2010) Яхния от мисли</h1>
+<!-- 				<h1 class="content-heading">(2010) Яхния от мисли</h1>
 				<article>
 					<p>"III" все още не е истински албум, а съдържа най-новите и най-яките песни на Димозавъръ, записани след 2014 година.</p>
 				</article> -->
@@ -336,11 +336,11 @@
 			</div>
 
 			<div class="content content-tune">
-				<h1>Подробности за песен</h1>
+				<h1 class="content-heading">Подробности за песен</h1>
 				<div>
-					<h2><a href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%B8%D0%B7%D1%82%D0%B5%D0%B3%D0%BB%D0%B8/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81">Жълтият блус</a> - 3:25	</h2>
+					<h2 class="tune-title"><a href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%B8%D0%B7%D1%82%D0%B5%D0%B3%D0%BB%D0%B8/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81">Жълтият блус</a> - 3:25	</h2>
 
-					<h5>19 октомври 2014</h5>
+					<h5 class="tune-release-date">19 октомври 2014</h5>
 
 					<ul class="tune-links">
 						<li class="tune-play">
@@ -372,7 +372,7 @@
 			</div>
 
 			<div class="content content-lyrics">
-				<h1>Song lyrics</h1>
+				<h1 class="content-heading">Song lyrics</h1>
 				<div class="lyrics-super-wrapper">
 					<div class="lyrics-wrapper">
 						<h3>Спонтанно механично разпръскване на аромати у дома</h3>
