standartized and cleaned up menu styles

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=26">
+		<link rel="stylesheet" href="css.css?version=29">
 
 		<script src="js.js?version=3"></script>
 	</head>
@@ -78,21 +78,21 @@
 						<ul>
 							<li>
 								<a href="javascript:;">
-									<span class="flag flag-bg"></span>
+									<span class="icon flag flag-bg"></span>
 									Български
 								</a>
 							</li>
 
 							<li>
 								<a href="javascript:;">
-									<span class="flag flag-en"></span>
+									<span class="icon flag flag-en"></span>
 									English
 								</a>
 							</li>
 
 							<li>
 								<a href="javascript:;">
-									<span class="flag flag-fr"></span>
+									<span class="icon flag flag-fr"></span>
 									Français
 								</a>
 							</li>
