--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=29">
+		<link rel="stylesheet" href="css.css?version=32">
 
 		<script src="js.js?version=3"></script>
 	</head>
@@ -38,17 +38,13 @@
 		<header>
 			<div class="header-container shadow-bottom">
 
-				<div class="logo-text logo-text-left">
-					Dimmu
-				</div>
+				<div class="logo-text logo-text-left">Dimmu</div>
 
 				<div class="logo shadow-bottom">
 					<img src="img/logo/dimmu-saurus-250-krio.png" alt="Dimmu Saurus" />
 				</div>
 
-				<div class="logo-text logo-text-right">
-					Saurus
-				</div>
+				<div class="logo-text logo-text-right">Saurus</div>
 
 				<div class="toggle-wrapper toggle-main-menu-wrapper">
 					<a
@@ -218,7 +214,18 @@
 
 
 			<div class="content content-bio">
+
+				<nav class="breadcrumbs" aria-label="breadcrumb">
+					<ul>
+						<li>
+							<span><a href="/home"><i class="icon fas fa-home"></i>Начало</a></span>
+						</li>
+						<li><i class="fas fa-book"></i>Биография</li>
+					</ul>
+				</nav>
+
 				<h1 class="content-heading">About Dimmu Saurus</h1>
+
 				<article>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis.</p>
 
@@ -247,6 +254,15 @@
 
 
 			<div class="content content-discography">
+
+				<nav class="breadcrumbs" aria-label="breadcrumb">
+					<ul>
+						<li>
+							<span><a href="/home"><i class="icon fas fa-home"></i>Начало</a></span>
+						</li>
+						<li><i class="fas fa-music"></i>Музика</li>
+					</ul>
+				</nav>
 
 				<h1 class="content-heading">Дискография</h1>
 				<article>
@@ -336,6 +352,24 @@
 			</div>
 
 			<div class="content content-tune">
+
+				<nav class="breadcrumbs" aria-label="breadcrumb">
+					<ul>
+						<li>
+							<span><a href="/home"><i class="icon fas fa-home"></i>Начало</a></span>
+						</li>
+						<li>
+							<span><a href="/home"><i class="icon fas fa-music"></i>Музика</a></span>
+						</li>
+						<li>
+							<span><a href="/home"><i class="fas fa-compact-disc"></i>Яхния от мисли</a></span>
+						</li>
+						<li>
+							<i class="fas fa-guitar"></i>Жълтият блус
+						</li>
+					</ul>
+				</nav>
+
 				<h1 class="content-heading">Подробности за песен</h1>
 				<div>
 					<h2 class="tune-title"><a href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%B8%D0%B7%D1%82%D0%B5%D0%B3%D0%BB%D0%B8/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81">Жълтият блус</a> - 3:25	</h2>
@@ -372,7 +406,27 @@
 			</div>
 
 			<div class="content content-lyrics">
+
+				<nav class="breadcrumbs" aria-label="breadcrumb">
+					<ul>
+						<li>
+							<span><a href="/home"><i class="icon fas fa-home"></i>Начало</a></span>
+						</li>
+						<li>
+							<span><a href="/home"><i class="icon fas fa-music"></i>Музика</a></span>
+						</li>
+						<li>
+							<span><a href="/home"><i class="fas fa-compact-disc"></i>Яхния от мисли</a></span>
+						</li>
+						<li>
+							<span><a href="/home"><i class="fas fa-guitar"></i>Момчето от делтата на Мисисипи</a></span>
+						</li>
+						<li><i class="fas fa-file-alt"></i>Текст</li>
+					</ul>
+				</nav>
+
 				<h1 class="content-heading">Song lyrics</h1>
+
 				<div class="lyrics-super-wrapper">
 					<div class="lyrics-wrapper">
 						<h3>Спонтанно механично разпръскване на аромати у дома</h3>
