fixed menu-music issues with shadows on large screens

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
 							</li>
 						</ul>
 
-						<nav class="menu menu-music menu-closed shadow-bottom">
+						<nav class="menu menu-music menu-closed">
 							<ul>
 								<li>
 									<a>(2014) III</a>
