css is now minified when being built

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=33">
+		<link rel="stylesheet" href="ds.min.css?version=34">
 
 		<script src="js.js?version=3"></script>
 	</head>
