basic javascript for player buttons

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 				<div class="toggle-wrapper toggle-main-menu-wrapper">
 					<a
 						href="javascript:;"
-						onClick="Menu.toggleMenuMain()"
+						onclick="Menu.toggleMenuMain()"
 						title="Main Menu">
 						<i class="fas fa-bars"></i>
 						<i class="fas fa-chevron-down"></i>
@@ -59,7 +59,7 @@
 				<div class="toggle-wrapper toggle-language-wrapper">
 					<a
 						href="javascript:;"
-						onClick="Menu.toggleMenuLanguage()"
+						onclick="Menu.toggleMenuLanguage()"
 						title="Change Language">
 						<i class="fas fa-language"></i>
 						<span class="toggle-language-label">Language</span>
@@ -111,7 +111,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="javascript:;" onClick="Menu.toggleMenuMusic();">
+								<a href="javascript:;" onclick="Menu.toggleMenuMusic();">
 									<i class="icon fas fa-music"></i>
 									Музика
 									<i class="fas fa-chevron-down"></i>
@@ -445,85 +445,85 @@
 			<div class="menu menu-playlist">
 				<ul>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Патката бяла</span>
 							<span class="playlist-time">10:23</span>
 						</a>
 					</li>
 					<li>
-						<a class="selected">
+						<a onclick="Player.selectTrack(666)" class="selected">
 							<span class="playlist-title">Баба меца си изгуби кеца</span>
 							<span class="playlist-time">1:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Кондю яде спанак</span>
 							<span class="playlist-time">1:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Don't leave me, Kage, you played the best shit you've ever fucking played</span>
 							<span class="playlist-time">10:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Има марулка, има трушийка и ще пийнем ракийка</span>
 							<span class="playlist-time">1:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Да изорем дружно нивите, момчета!</span>
 							<span class="playlist-time">1:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Ох вел</span>
 							<span class="playlist-time">1:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Коньовишки жентълмен</span>
 							<span class="playlist-time">1:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">жунгла е тука</span>
 							<span class="playlist-time">1:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">дай му жега с паста за зъби корега</span>
 							<span class="playlist-time">1:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">аре ве, докога ще пиша, не стана ли достатъчно високо това?</span>
 							<span class="playlist-time">10:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Небостъргач ли строим тука?</span>
 							<span class="playlist-time">1:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">и осван това ми писна от тая песен, дето я слушам</span>
 							<span class="playlist-time">1:23</span>
 						</a>
 					</li>
 					<li>
-						<a>
+						<a onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Фред Герлах си пускам - Банат</span>
 							<span class="playlist-time">1:23</span>
 						</a>
@@ -563,13 +563,13 @@
 			<a
 				id="pl-playlist-toggle"
 				href="javascript:;"
-				onClick="Menu.togglePlaylist()"
+				onclick="Menu.togglePlaylist()"
 				class="playlist"><i class="fas fa-chevron-up"></i></a>
 
 				<div class="track-title">
 					<a
 						href="javascript:;"
-						onClick="Menu.togglePlaylist()">
+						onclick="Menu.togglePlaylist()">
 					Le temps de chasseurs est venu encore une fois
 					</a>
 				</div>
@@ -586,18 +586,21 @@
 
 			<div class="player-controls">
 				<a
-					onClick="toggleMute()"
+					onclick="Player.toggleMute()"
 					class="volume fas fa-volume-up"
 					href="javascript:;"></a><a
 
+					onclick="Player.previous()"
 					id="pl-previous"
 					class="fas fa-step-backward"
 					href="javascript:;"></a><a
 
+					onclick="Player.play()"
 					id="pl-play"
 					class="fas fa-play"
 					href="javascript:;"></a><a
 
+					onclick="Player.next()"
 					id="pl-next"
 					class="fas fa-step-forward"
 					href="javascript:;"></a>
